<resources>
    <string name="app_name">SelfEducation</string>
    <string name="start_course">Начать курс</string>
    <string name="course_title">Курс по программированию</string>
    <string name="course_author">Автор курса</string>
    <string name="person">person</string>
    <string name="icon">icon</string>
    <string name="add_new_course">add_new_course</string>
    <string name="star">star</string>
    <string name="begin">Продолжить</string>
    <string name="catalog">catalog</string>
    <string name="achievement">achievements</string>
    <string name="not_ready">empty yet:(</string>
</resources>