<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_course"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/person"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/course_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_course"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/course_author"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/button_course"
            app:layout_constraintStart_toEndOf="@+id/iv_course"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <ImageView
            android:id="@+id/iv_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="@id/tv_author"
            app:layout_constraintTop_toBottomOf="@id/tv_author" />

        <TextView
            android:id="@+id/tv_count_of_people"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/iv_person"
            app:layout_constraintStart_toEndOf="@id/iv_person"
            app:layout_constraintTop_toBottomOf="@id/tv_author"
            tools:text="100" />

        <ImageView
            android:id="@+id/iv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/tv_count_of_people"
            app:layout_constraintEnd_toStartOf="@id/button_course"
            app:layout_constraintStart_toEndOf="@id/iv_person"
            app:layout_constraintTop_toTopOf="@id/iv_person"
            app:layout_constraintTop_toBottomOf="@id/tv_author"
            />


        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/tv_count_of_people"
            app:layout_constraintStart_toEndOf="@id/iv_rating"

            app:layout_constraintTop_toBottomOf="@id/tv_author"
            tools:text="5.0" />


        <Button
            android:id="@+id/button_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin"
            android:textColor="@color/white"
            android:backgroundTint="@color/started_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_author" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/base_color"
            app:layout_constraintBottom_toBottomOf="@id/button_course"
            app:layout_constraintEnd_toEndOf="@id/iv_course"
            app:layout_constraintStart_toStartOf="@id/iv_course"
            app:layout_constraintTop_toBottomOf="@id/iv_course"
            tools:text="3500" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>